[gd_scene load_steps=10 format=3 uid="uid://dlugv5bo64k7n"]

[ext_resource type="Script" path="res://src/main/scene/role/effect/LightingChainV2/lighting_chain.gd" id="1_2mjfu"]
[ext_resource type="Texture2D" uid="uid://crb75oqxhcwd0" path="res://assets/MyVFX/ThunderVFX/LightingChain.png" id="1_o8u1v"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wdvlg"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:length")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_ldq0f"]
radius = 100.0

[sub_resource type="Environment" id="Environment_qhjjb"]
glow_enabled = true
glow_blend_mode = 0

[sub_resource type="Animation" id="Animation_txnhl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bowph"]
resource_name = "finish"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sg06x"]
resource_name = "idle"
length = 0.24
loop_mode = 1
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqpya"]
_data = {
"RESET": SubResource("Animation_txnhl"),
"finish": SubResource("Animation_bowph"),
"idle": SubResource("Animation_sg06x")
}

[node name="LightingChain" type="Sprite2D"]
z_index = 30
texture_repeat = 2
rotation = -1.5708
texture = ExtResource("1_o8u1v")
hframes = 6
region_enabled = true
region_rect = Rect2(0, 0, 288, 0)
script = ExtResource("1_2mjfu")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wdvlg")

[node name="SearchBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchBox"]
shape = SubResource("CircleShape2D_ldq0f")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qhjjb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gqpya")
}

[connection signal="body_entered" from="SearchBox" to="." method="_on_search_box_body_entered"]
[connection signal="body_exited" from="SearchBox" to="." method="_on_search_box_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
